# power-overwhelming

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENCE  README.md  azure-pipelines.yml  power-overwhelming.sln
beliv/: power-overwhelming-d3-3090.json  power-overwhelming-d3-a6000.json  power-overwhelming-d3-w6800.json
docs/: HARDWARE.md  TINKERFORGE.md  (+1 more)
install_pwrowgrapldrv/: CMakeLists.txt  install_pwrowgrapldrv.cpp
lpt_test/: CMakeLists.txt  lpt_test.cpp
poweb/: CMakeLists.txt  Configuration.cpp  Configuration.h  Controller.cpp  Controller.h  demo.json  observable-a6000.csv  packages.config  packages.props  pch.cpp  pch.h  poweb.cpp  poweb.rc  poweb.vcxproj  poweb.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h  targetver.h
power_overwhelming/: CMakeLists.txt  adl.cpp  adl.h  adl_scope.cpp  adl_scope.h  adl_sensor.cpp  adl_sensor.h  adl_sensor_impl.cpp  adl_sensor_impl.h  adl_sensor_source.cpp  amd_display_library.cpp  amd_display_library.h  collector.cpp  collector_impl.cpp  collector_impl.h  com_error_category.h  convert_string.cpp  convert_string.h  csv_iomanip.cpp  default_sampler_context.h  default_sampler_context.inl  graphics_device.cpp  hmc8015_sensor.cpp  library_base.h  measurement.cpp  measurement.h  nvidia_management_library.cpp  nvidia_management_library.h  nvml_exception.h  nvml_scope.cpp  nvml_scope.h  nvml_sensor.cpp  nvml_sensor.h  nvml_sensor.inl  nvml_sensor_impl.cpp  nvml_sensor_impl.h  oscilloscope_sensor_definition.cpp  power_overwhelming.vcxproj  power_overwhelming.vcxproj.filters  power_overwhelmingConfig.cmake.in  (+39 more)
power_overwhelming/include/: adl_exception.h  adl_sensor.h  csv_iomanip.h  hmc8015_sensor.h  instrument_range.h  log_mode.h  measurement.h  measurement.inl  nvml_sensor.h  oscilloscope_sensor_definition.h  power_overwhelming_api.h  rtb_sensor.h  sensor.h  stream_element.h  text.h  text.inl  timestamp.h  timestamp.inl  timestamp_resolution.h  tinkerforge_display.h  tinkerforge_sensor.h  tinkerforge_sensor_definiton.h  visa_sensor.h
power_overwhelming/include/power_overwhelming/: Output-Build.txt  adl_sensor.h  adl_sensor_source.h  adl_throttling_sensor.h  async_delivery_method.h  async_sampling.h  async_sampling.inl  blob.h  blob.inl  collector.h  collector.inl  collector_settings.h  computer_name.h  conversion_time.h  convert_string.h  convert_string.inl  cpu_affinity.h  cpu_info.h  cpu_vendor.h  csv_iomanip.h  dump_sensors.h  emi_sensor.h  event.h  for_each_rapl_domain.h  graphics_device.h  hmc8015_function.h  hmc8015_sensor.h  instrument_range.h  integrator_mode.h  literal.h  log_mode.h  measurement.h  measurement.inl  measurement_data.h  measurement_data_series.h  msr_offsets.h  msr_sensor.h  nvml_sensor.h  oscilloscope_acquisition.h  oscilloscope_acquisition_state.h  (+63 more)
power_overwhelming/include/visus/pwrowg/: adl_configuration.h  adl_sensor_source.h  adl_thermal_sensor.h  adl_throttling_sensor.h  api.h  async_delivery_method.h  async_sampling.h  atomic_collector.h  atomic_collector.inl  atomic_sink.h  atomic_sink.inl  atomic_utilities.h  atomic_utilities.inl  benchlab_configuration.h  blob.h  blob.inl  blob_streambuf.h  blob_streambuf.inl  collector.h  collector_result.h  collector_result.inl  collector_settings.h  computer_name.h  convert_string.h  convert_string.inl  cpu_affinity.h  cpu_info.h  csv_column.h  csv_iomanip.h  csv_sink.h  csv_sink.inl  daqmx_analog_edge_trigger.h  daqmx_channel.h  daqmx_configuration.h  daqmx_current_channel.h  daqmx_device.h  daqmx_done_handler.h  daqmx_done_handler.inl  daqmx_edge.h  daqmx_immediate_trigger.h  (+167 more)
power_overwhelming/src/: Output-Build.txt  _sampler.h  adl_configuration.cpp  adl_error_category.cpp  adl_error_category.h  adl_exception.cpp  adl_exception.h  adl_scope.cpp  adl_scope.h  adl_sensor.cpp  adl_sensor.h  adl_sensor.inl  adl_sensor_impl.cpp  adl_sensor_impl.h  adl_sensor_source.cpp  adl_sensor_source.h  adl_thermal_sensor.cpp  adl_thermal_sensor.h  adl_throttling_sensor.cpp  adl_utils.cpp  adl_utils.h  adl_utils.inl  amd_display_library.cpp  amd_display_library.h  async_measurement_data_source.h  async_sampling.cpp  atomic_utilities.cpp  atomic_utilities.h  basic_async_measurement_data_source.h  basic_async_measurement_data_source.inl  basic_sampler.h  basic_sampler_source.h  basic_sampler_source.inl  benchlab_configuration.cpp  benchlab_sensor.cpp  benchlab_sensor.h  benchlab_sensor.inl  blob.cpp  collector.cpp  collector_impl.cpp  (+337 more)
pwrovrnvapi/: CMakeLists.txt  README.md
pwrovrnvapi/include/: pwrovrnvapi.h
pwrovrnvapi/src/: main.cpp  pwrovrnvapi.cpp
pwrowgrapldrv/: CMakeLists.txt  DriverEntry.cpp  README.md  RaplCleanup.cpp  RaplClose.cpp  RaplCpuInfo.h  RaplCreate.cpp  RaplDeviceAdd.cpp  RaplDriver.h  RaplDriverUnload.cpp  RaplMemory.h  RaplMsr.cpp  RaplMsr.h  RaplParse.cpp  RaplRead.cpp  RaplRegistry.cpp  RaplRegistry.h  RaplShutdown.cpp  RaplString.cpp  RaplString.h  RaplThreadAffinity.cpp  RaplThreadAffinity.h  driver_entry.cpp  msr.cpp  msr.h  pwrowgrapldrv.inf  rapl_cleanup.cpp  rapl_close.cpp  rapl_create.cpp  rapl_read.cpp  thread_affinity.cpp  thread_affinity.h
rtx_config/: CMakeLists.txt  rtx_config.cpp
test/: CMakeLists.txt  adl_test.cpp  async_sampling_test.cpp  atomic_collector.cpp  atomic_collector_test.cpp  atomic_utilities_test.cpp  blob_test.cpp  collector_test.cpp  computer_name_test.cpp  cpu_info_test.cpp  cpu_vendor_test.cpp  csv_iomanip_test.cpp  csv_sink_test.cpp  daqmx_channel_test.cpp  daqmx_configuration_test.cpp  daqmx_device_test.cpp  daqmx_library_test.cpp  daqmx_sensor_test.cpp  daqmx_task_test.cpp  daqmx_timing_test.cpp  emi_test.cpp  event_test.cpp  fnv1a_test.cpp  hash_test.cpp  hmc8015_test.cpp  intel_test.cpp  io_test.cpp  marker_test.cpp  measurement_data_series_test.cpp  measurement_data_test.cpp  measurement_test.cpp  msr_sensor_test.cpp  msr_test.cpp  multi_sz_test.cpp  nvidia_test.cpp  nvml_test.cpp  on_exit_test.cpp  oscilloscope_acquisition_test.cpp  oscilloscope_channel_test.cpp  oscilloscope_data_test.cpp  (+35 more)
usbpd/: CMakeLists.txt  README.md
usbpd/include/: usbpd.h
usbpd/src/: usbpd.cpp
(+42 files in other folders)
